# integrify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  duties.py  index.html  mkdocs.yml  netlify.toml  pyproject.toml  t.py
.github/workflows/: publish.yml  smokeshow.yml  test.yml
clientaz/: base.py  logger.py
clientaz/epoint/: README.md  __init__.py  helper.py  types.py
clientaz/epoint/asyncio/: __init__.py  base.py  misc.py  payment.py  split.py
clientaz/epoint/schemas/: data.py  parts.py  request.py  response.py  types.py
clientaz/epoint/sync/: base.py  misc.py  payment.py  split.py
docs/: index.md
docs/api_reference/: epoint.md
docs/az/: mkdocs.yml
docs/az/docs/: index.md
docs/az/docs/azericard/: about.md
docs/az/docs/azericard/api-reference/: callback.md  client.md  helper-functions.md  response.md
docs/az/docs/epoint/: about.md  api-reference.md
docs/az/docs/epoint/api-reference/: callback.md  helper-functions.md
docs/az/docs/integrations/azericard/: about.md
docs/az/docs/integrations/azericard/api-reference/: callback.md  client.md  common-schemas.md  helper-functions.md  response.md
docs/az/docs/integrations/epoint/: about.md
docs/az/docs/integrations/epoint/api-reference/: client.md  helper-functions.md
docs/az/docs/integrations/kapital/: about.md
docs/az/docs/integrations/kapital/api-reference/: client.md  response.md
docs/az/docs/integrations/lsim/: about.md
docs/az/docs/integrations/lsim/api-reference/: client.md  enums.md  response.md
docs/az/docs/integrations/lsim/api-reference/bulk/: client.md  enums.md  response.md
docs/az/docs/integrations/lsim/api-reference/single/: client.md  enums.md  response.md
docs/az/docs/integrations/posta-guvercini/: about.md
docs/az/docs/integrations/posta-guvercini/api-reference/: client.md
docs/az/docs/integrations/postaguvercini/: about.md
docs/az/docs/integrations/postaguvercini/api-reference/: client.md  response.md
docs/az/docs/kapital/: about.md
docs/az/docs/kapital/api-reference/: client.md  response.md  utils.md
docs/az/docs/lsim/: about.md
docs/az/docs/lsim/api-reference/: client.md  helper-functions.md  response.md
docs/az/docs/resources/: api-reference.md  code-architecture.md  contributing.md
docs/az/overrides/partials/integrations/analytics/: goatcounter.html
docs/css/: custom.css
docs/epoint/: about.md  api-reference.md
docs/general/: epoint.md
docs/js/: custom.js
integrify/: base.py
integrify/epoint/: README.md  __init__.py  asyncio.py  env.py  helper.py  sync.py
integrify/epoint/asyncio/: base.py  misc.py  payment.py  split.py
integrify/epoint/schemas/: parts.py  types.py
integrify/epoint/sync/: __init__.py  base.py  misc.py  payment.py  split.py
src/integrify/: api.py  base.py  logger.py  schemas.py  utils.py
src/integrify/azericard/: __init__.py  client.py  env.py  handler.py  helpers.py  utils.py
src/integrify/azericard/schemas/: callback.py  common.py  enums.py  request.py  response.py
src/integrify/azericard/schemas/request/: __init__.py  auth.py  transfer.py
src/integrify/epoint/: README.md  __init__.py  asyncio.py  client.py  env.py  handlers.py  helper.py  helpers.py  sync.py
src/integrify/epoint/schemas/: callback.py  enums.py  request.py  response.py
src/integrify/kapital/: __init__.py  client.py  env.py  handlers.py
src/integrify/kapital/schemas/: enums.py  request.py  response.py  utils.py
src/integrify/kapital/schemas/response/: __init__.py  base_response.py  detailed_order_response.py  order_response.py  refund_response.py  token_response.py
src/integrify/lsim/: __init__.py  client.py  env.py  handlers.py  types.py
src/integrify/lsim/bulk/: __init__.py  client.py  env.py  handlers.py
src/integrify/lsim/bulk/schemas/: enums.py  request.py  response.py
src/integrify/lsim/schemas/: enums.py  request.py  response.py
src/integrify/lsim/single/: __init__.py  client.py  env.py  handlers.py
src/integrify/lsim/single/schemas/: enums.py  request.py  response.py
src/integrify/payriff/: __init__.py  client.py  env.py  handlers.py
src/integrify/payriff/schemas/: enums.py  parts.py  request.py  response.py  types.py  utils.py
src/integrify/payriff/schemas/response/: __init__.py  base_response.py  order_info_response.py  order_response.py  refund_response.py
src/integrify/payriff/v2/: sync.py
src/integrify/payriff/v3/: sync.py
src/integrify/postaguvercini/: __init__.py  client.py  env.py  handlers.py  types.py
src/integrify/postaguvercini/schemas/: enums.py  request.py  response.py  utils.py
tests/: conftest.py  mocks.py  test_ast.py  test_base.py
tests/azericard/: conftest.py  mocks.py  test_base.py  test_requests.py
tests/epoint/: __init__.py  conftest.py  mocks.py  test_helpers.py  test_misc.py  test_payment.py  test_split.py
tests/kapital/: __init__.py  conftest.py  mocks.py  test_kapital_request.py
tests/lsim/: conftest.py  test_base.py  test_bulk.py  test_bulk_errors.py  test_errors.py  test_live.py  test_single.py  test_single_errors.py
tests/postaguvercini/: __init__.py  conftest.py  mocks.py  test_base.py  test_errors.py  test_mock.py  test_postaguvercini_live.py  test_postaguvercini_mock.py  test_postaguvercini_request.py
